# ecommerce_pipeline

./: .dockerignore  Dockerfile  README.md  README.pt-br.md  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: dbt_pipeline.py  pipeline.py
ecommerce/: dbt_project.yml
ecommerce/models/gold/: _gold.yml  gold_competidores.sql  gold_ranking_produtos.sql  gold_receita_por_categoria.sql
ecommerce/models/gold/bi/: _bi.yml  gold_bi_competidores.sql
ecommerce/models/silver/: _silver.yml  silver_clientes.sql  silver_competidores.sql  silver_produtos.sql  sources.yml
include/dbt/ecommerce/: dbt_project.yml
include/src/cloud/: cloud_connection.py
include/src/collector/: csv_collector.py
include/src/core/: settings.py
include/src/data/staging/: preco_competidores.parquet  produtos.parquet
include/src/database/: db_writer.py
include/src/pipeline/: pipeline_runner.py
include/src/schemas/: registry.py
include/src/schemas/contracts/: vendas.yaml
include/src/transformer/: csv_transformer.py  data_transformer.py
src/cloud/: cloud_connection.py  datalake_reader.py  datalake_writer.py  storage.py
src/collector/: csv_collector.py  data_collector.py
src/core/: settings.py
src/data/staging/: clientes.parquet  preco_competidores.parquet  produtos.parquet  vendas.parquet
src/database/: db_writer.py
src/pipeline/: pipeline_runner.py
src/schemas/contracts/: clientes.yaml  preco_competidores.yaml  produtos.yaml
src/transformer/: csv_transformer.py  data_transformer.py  parquet_transformer.py
(+5 files in other folders)
